tests/files/type_checker_tests/should_pass/067.cmdr
//Test that pre-decrement operations type check
a = (2.0, true, 3);
x = 1;
y = --a[x];
