tests/files/type_checker_tests/should_fail/046.cmdr
//Should fail when trying to call something that isn't a function
x = 3;
y = x(2, 3);